--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <title>Natours | Exciting tours for adventurous people</title>
 </head>
 
-<body>
+<>
     <header class="header">
         <div class="header__logo-box">
             <img src="img/logo-white.png" alt="logo" class="header__logo">
@@ -32,7 +32,15 @@
         </div>
     </header>
 
-<!-- grid system practice -->
+    <main>
+        <section class="section-about">
+            <h2 class="heading-secondary">
+                Exciting tours for adventurous people
+            </h2>
+        </section>
+    </main>
+
+    <!-- grid system practice -->
     <!-- <section class="grid-test">
 
         <div class="row">
@@ -103,6 +111,6 @@
 
     </section> -->
 
-</body>
+    </body>
 
 </html>
