--- a/index.html
+++ b/index.html
@@ -35,14 +35,26 @@
     <main>
         <section class="section-about">
             <div class="u-center-text">
-                <h2 class="heading-secondary u-margin-bottom-8">
+                <h2 class="heading-secondary u-margin-bottom-big">
                     Exciting tours for adventurous people
                 </h2>
             </div>
 
             <div class="row">
                 <div class="col-1-of-2">
-                    Text content
+                    <h3 class="heading-tertiary u-margin-bottom-small">You're going to fall in love with nature</h3>
+                    <p class="paragraph">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi fugit animi, nostrum sequi
+                        eaque blanditiis a. Sunt temporibus sequi ipsam, totam quo reprehenderit, beatae dolorem ipsum
+                        dignissimos perferendis doloribus dolores!
+                    </p>
+                    <h3 class="heading-tertiary u-margin-bottom-small">Live adventures like you never have before</h3>
+                    <p class="paragraph">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam nihil nisi eos reiciendis
+                        quibusdam quam quaerat praesentium consequatur quidem
+                    </p>
+
+                    <a href="#" class="btn-text">Learn more &rarr;</a>
                 </div>
                 <div class="col-1-of-2">
                     Image
